test/functions/resolution/errors/testBadCallCandidates.6.good
testBadCallCandidates.chpl:71: In function 'main':
testBadCallCandidates.chpl:91: error: unresolved call 'bar("hi")'
testBadCallCandidates.chpl:65: note: this candidate did not match: bar(x: D)
testBadCallCandidates.chpl:91: note: because actual argument #1 with type 'string'
testBadCallCandidates.chpl:65: note: is passed to formal 'x: D'
note: there are also 3 other candidates, use --print-all-candidates to see them
